--- a/style.css
+++ b/style.css
@@ -8,15 +8,12 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: 'Red Hat Display', sans-serif;
-  line-height: ;
-}
-
 body {
+	font-family: 'Red Hat Display', sans-serif;
   height: 100vh;
   width: 100vw;
   background: hsl(225, 100%, 98%);
+	line-height: 1.2;
 }
 
 p {
@@ -27,7 +24,7 @@ p {
   background: url(images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   background-size: auto;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -83,7 +80,7 @@ p {
   margin-left: -30px;
 }
 
-#price {
+.price {
   color: gray;
 }
 
@@ -96,7 +93,7 @@ p {
 }
 
 .change-btn a:hover {
-  color: hsl(224, 23%, 55%);
+  color: purple;
   text-decoration: none;
   cursor: pointer;
 }
@@ -109,7 +106,7 @@ p {
 }
 
 .btn {
-  background: hsl(228, 45%, 44%);
+  background: hsl(245, 75%, 52%);
   color: #fff;
   text-decoration: none;
   text-align: center;
@@ -130,7 +127,7 @@ p {
   font-weight: 600;
 }
 
-#cancel-btn {
+.cancel-btn {
   margin-top: 30px;
   margin-bottom: 30px;
   text-decoration: none;
@@ -139,7 +136,7 @@ p {
   font-weight: 600;
 }
 
-#cancel-btn:hover {
+.cancel-btn:hover {
   color: #000;
   cursor: pointer;
 }
@@ -153,6 +150,8 @@ p {
   color: hsl(228, 45%, 44%);
 }
 
+
+/* Media queries */
 @media screen and (max-width: 376px) {
   .page-wrapper {
     background: url(images/pattern-background-mobile.svg);
@@ -161,7 +160,6 @@ p {
   }
 
   .main-box {
-    /* margin-top: 70px; */
     max-height: 575px;
     max-width: 325px;
   }
